Update .azure-pipeline.yml for Azure Pipelines

--- a/.azure-pipeline.yml
+++ b/.azure-pipeline.yml
@@ -1,8 +1,7 @@
-jobs:
-  pool: default
-  steps:
-    - template: copy-files-steps-without-timestamp-check.yml
+trigger:
+- master
 
-  pool: default
-  steps:
-    - template: copy-files-steps.yml
+pool: default
+
+steps:
+  - template: copy-files-steps.yml
