--- a/src/copy-files/templates/test-step-template.yml
+++ b/src/copy-files/templates/test-step-template.yml
@@ -35,3 +35,4 @@ steps:
     inputs:
       filePath: ${{ parameters.pathToValidationScript }}
       arguments: ${{ parameters.validatonScriptArguments }}
+      bashEnvValue: 'C:\Program Files\Git\git-bash.exe'
